--- a/helm/news-demo-app-chart/templates/loadbalancer.yaml
+++ b/helm/news-demo-app-chart/templates/loadbalancer.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: news-demo-app
+  name: civo-lb-service
 spec:
+  type: LoadBalancer
   selector:
     app: news-demo-app
-  type: ClusterIP
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 8080
     targetPort: 3000
-    protocol: TCP
+    name: news-demo-app
