--- a/helm/news-demo-app-chart/templates/ingress.yaml
+++ b/helm/news-demo-app-chart/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: {{ .Values.ingress.host }}
+  - host: "*.samgawali.com"
     http:
       paths:
       - pathType: Prefix
