--- a/helm/news-demo-app-chart/values.yaml
+++ b/helm/news-demo-app-chart/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: samgawali/news-demo-app
@@ -17,7 +17,7 @@ ingress:
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
-  - host: fbaabbf9-7098-4040-b2ff-cf5ce0a54d24.lb.civo.com
+  - host: "*.samgawali.com"
     paths:
     - path: /
       pathType: ImplementationSpecific
